--- a/src/app.css
+++ b/src/app.css
@@ -11,14 +11,14 @@ body {
 #logo {
   width: 100%;
   height: 120px;
-  background: url(logo.png) no-repeat center;
+  background: url(/logo.png) no-repeat center;
 }
 
 .push-right {
-  float: right
+  float: right;
 }
 
-input[type=text] {
+input[type="text"] {
   font-size: 1.2em;
   width: 100%;
   padding: 12px;
